sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: reassignment to val
				swapped=true;
                                       ^AlgCocktailSort1:9: error: reassignment to val
			}else swapped=false;
                                     ^AlgCocktailSort1:14: error: reassignment to val
				swapped=true;
                                       ^AlgCocktailSort1:16: error: reassignment to val
			else swapped=false;
                                    ^